--- a/demo/demo.html
+++ b/demo/demo.html
@@ -46,52 +46,11 @@
     <img src="images/39.jpg">
     <img src="images/40.jpg">
 </div>
-<div class="rotate-test" id="demo2">
-    <img src="images/1.jpg">
-    <img src="images/2.jpg">
-    <img src="images/3.jpg">
-    <img src="images/4.jpg">
-    <img src="images/5.jpg">
-    <img src="images/6.jpg">
-    <img src="images/7.jpg">
-    <img src="images/8.jpg">
-    <img src="images/9.jpg">
-    <img src="images/10.jpg">
-    <img src="images/11.jpg">
-    <img src="images/12.jpg">
-    <img src="images/13.jpg">
-    <img src="images/14.jpg">
-    <img src="images/15.jpg">
-    <img src="images/16.jpg">
-    <img src="images/17.jpg">
-    <img src="images/18.jpg">
-    <img src="images/19.jpg">
-    <img src="images/20.jpg">
-    <img src="images/21.jpg">
-    <img src="images/22.jpg">
-    <img src="images/23.jpg">
-    <img src="images/24.jpg">
-    <img src="images/25.jpg">
-    <img src="images/26.jpg">
-    <img src="images/27.jpg">
-    <img src="images/28.jpg">
-    <img src="images/29.jpg">
-    <img src="images/30.jpg">
-    <img src="images/31.jpg">
-    <img src="images/32.jpg">
-    <img src="images/33.jpg">
-    <img src="images/34.jpg">
-    <img src="images/35.jpg">
-    <img src="images/36.jpg">
-    <img src="images/37.jpg">
-    <img src="images/38.jpg">
-    <img src="images/39.jpg">
-    <img src="images/40.jpg">
-</div>
+<div class="rotate-test" id="demo2"></div>
 <script type="text/javascript" src="../dist/js360.min.js"></script>
 <script type="text/javascript">
     window.JS360.generate360view('demo1');
-    window.JS360.generate360view('demo2');
+    window.JS360.generate360view('demo2', ["images/1.jpg", "images/2.jpg", "images/3.jpg", "images/4.jpg", "images/5.jpg", "images/6.jpg", "images/7.jpg", "images/8.jpg", "images/9.jpg", "images/10.jpg", "images/11.jpg", "images/12.jpg", "images/13.jpg", "images/14.jpg", "images/15.jpg", "images/16.jpg", "images/17.jpg", "images/18.jpg", "images/19.jpg", "images/20.jpg", "images/21.jpg", "images/22.jpg", "images/23.jpg", "images/24.jpg", "images/25.jpg", "images/26.jpg", "images/27.jpg", "images/28.jpg", "images/29.jpg", "images/30.jpg", "images/31.jpg", "images/32.jpg", "images/33.jpg", "images/34.jpg", "images/35.jpg", "images/36.jpg", "images/37.jpg", "images/38.jpg", "images/39.jpg", "images/40.jpg"]);
 </script>
 </body>
 </html>
